Hierarquia de textos

--- a/index.html
+++ b/index.html
@@ -3,10 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="Bokehlicia-Captiva-Libreoffice-base.ico" type="image/x-icon">
-    <title>Teste de Favicon</title>
+    <link rel="shortcut icon" href="Bokehlicia-Captiva-Chat-bubbles.ico" type="image/x-icon">
+    <title>Hierarquia de titulos</title>
 </head>
 <body>
-    <h1>Olha aqui o favicon em cima </h1>
+    <h1>Entendendo Portugal</h1>
+    <h2>Introdução</h2>
+    <h3>Justificação da Temática</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque atque dolorem soluta maiores cum! Adipisci tempora laborum minima temporibus porro laboriosam illum nisi eos accusamus asperiores, consequuntur debitis distinctio culpa.</p>
+    <h3>Caráter exercional</h3>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat atque consequuntur laborum omnis veritatis dolorum quam nulla voluptas et quos, unde culpa, rerum aliquam aspernatur. Magnam temporibus praesentium commodi facilis?</p>
+    <h3>Perguntas de Partidas</h3>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos eum atque quibusdam beatae veritatis quam quas, porro repudiandae asperiores odit, repellendus possimus iste totam sapiente incidunt laborum soluta tenetur ullam?</p>
+    <h3>Metodólogia de investigação</h3>
+    <h4>Etapas de investigação</h4>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid porro, doloribus itaque aperiam fugiat fuga. Aliquam dolore alias sed, ipsum illo non, facilis vel nobis blanditiis distinctio minus, veniam voluptatibus.</p>
+    <h4>Instrumentos de Análise </h4>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae a est accusantium fuga quia deleniti quis optio voluptatem asperiores? Asperiores, culpa? Officiis sunt et iusto esse amet odio delectus. Dolore?</p>
+    <h2>Ordenamento do Territorio em Portugal</h2>
+    <h3>Os instrumentos de gestão</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum voluptas deleniti suscipit consectetur odit amet mollitia dolore pariatur magni labore obcaecati perspiciatis iusto blanditiis ullam doloremque, sequi voluptatum vero nisi?</p>
+    <h4>Os instrumentos de planeamento</h4>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit obcaecati aliquid, illo esse iste incidunt vitae cupiditate expedita impedit debitis dicta adipisci totam facere, corporis ex? Magnam minima autem enim?</p>
+    <h4>Os regimes territoriais </h4>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic recusandae deleniti necessitatibus, voluptas obcaecati dignissimos, incidunt modi totam consectetur autem quasi qui consequatur ratione accusantium veritatis perferendis ipsa sapiente error!</p>
 </body>
 </html>
